2011-04-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Start using paisley to save docs.

2011-04-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/conflict.py:
	* python/mushin/command/list.py:
	* python/mushin/command/replicate.py:
	  Use self.stdout on the Displayers.
	* python/mushin/command/project.py:
	* python/mushin/common/parse.py:
	* python/mushin/command/main.py:
	  Switch interpreter to the manholecmd one.
	  Various fixes.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Remove last prints.  Pass stdout to Displayer.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	  Use a proper stdout you can pass to display things.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	* python/mushin/command/thing.py:
	  Use self.stdout.write instead of print for commands.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/things-by-id-reversed/map.js:
	* python/mushin/command/main.py:
	* python/mushin/extern/paisley/couchdb.py:
	* python/mushin/model/couch.py:
	  Use the reversed id's for shortid, since couchdb 1.0.x changed
	  the uuid generation algorithm and it now generates a lot of common
	  prefixes.

2011-03-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/parse.py:
	  Fix the case for parsing 1W.
	* python/mushin/test/test_common_parse.py (added):
	  Add a test for it.

2011-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Add a 'delay' command to delay tasks.
	* python/mushin/common/format.py:
	  Add a formatTime method.
	* python/mushin/common/parse.py:
	  Extract method to parse a time spec.

2011-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py: